FIX trimming problem of heart icon and visible div separation

--- a/style/scss/pages/_annex-page__restaurant-intro.scss
+++ b/style/scss/pages/_annex-page__restaurant-intro.scss
@@ -27,6 +27,7 @@
         border-radius: 30px 30px 0 0;
         padding: 20px 18px 10px 18px;
         z-index: 1;
+        bottom: -1px;
         /*bottom: -1px; /*juste pour cacher le défaut de séparation de deux div, si tu l'enlèves tu verras*//*finalement pas utile?*/
         h1 {
             margin: 0px;
@@ -70,5 +71,5 @@
 .restaurant-intro__heading__opinion__icon .far {/*est au dessus de icon .fas car déclaré en dernier dans html*/
     position: relative;
     /*background-color: #fff;*/
-    font-size: 22px;
+    font-size: 22.2px; /*permet d'éviter un petit rognage du coeur rempli...*/
 }
